# wdmtoolbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  .travis.yml  AUTHORS.rst  BADGES.rst  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST  MANIFEST.in  NEWS.txt  README.rst  VERSION  appveyor.yml  build.cmd  cibuildwheel.sh  detox  meson.build  pip_requirements.txt  publish.py  pyproject.toml  setup.cfg  setup.py  shippable.yml  site.cfg  tox.ini  wdmutil.py
.github/: dependabot.yml
.github/workflows/: clean-workflow-runs.yml  linux_wheels.yml  mac_wheels.yml  publish_conda.yml  pypi-package.yml  pypi_package.yml  python-package.yml  tests.yml  wheels.yml  windows_wheels.yml
docs/: Makefile  command_line.rst  conf.py  function_summary.rst  index.rst  install.rst  make.bat  usage.rst
docsrc/: Makefile  conf.py  function_summary.rst  index.rst  install.rst  modules.rst  usage.rst  wdmtoolbox.rst
scripts/: wdmtoolbox.py
src/: meson.build  wdmutil.py
src/wdmtoolbox/: __init__.py  wdmtoolbox.py  wdmutil.py
src/wdmtoolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: MA190049.wdm  nwisiv_02246000.csv  sunspot_area_with_missing.csv  test_cleancopy.py  test_copydsn.py  test_createdsn.py  test_createwdm.py  test_deletedsn.py  test_extract.py  test_importdata.py  test_listdsns.py  test_rdii.py  test_renumberdsn.py
wdm_support/: CFBUFF.INC  CONST.INC  CWDMID.INC  CWTSDS.INC  DTTM90.f  TSBUFR.f  UTCHAR.f  UTCP90.f  UTDATE.f  UTNUMB.f  UTWDMD.f  UTWDMF.f  UTWDT1.f  WDATM1.f  WDATM2.f  WDATRB.f  WDBTCH.f  WDMESS.f  WDMID.f  WDOP.f  WDTMS1.f  WDTMS2.f  create_new_wrapper.sh  wdm-f2pywrappers.f  wdm.pyf  wdm_template.pyf  wdmmodule.c
wdmtoolbox/: __init__.py  message.wdm  wdmtoolbox.py  wdmutil.py
wdmtoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
