[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python",
    "setuptools",
    "setuptools_scm",
    "oldest-supported-numpy",
    "wheel"
]

[project]
name = "wdmtoolbox"
dynamic = ["version"]
description = "Read and write Watershed Data Management (WDM) files"
readme = "README.rst"
dependencies = [
    "filelock",
    "cltoolbox >= 2.0.0, < 3.0.0",
    "toolbox_utils >= 5.0.0, < 6.0.0",
    "numpy",
    "pandas",
    "pint!=0.21.*",
    "pint<0.22; python_version < '3.9'",
    "pint-pandas",
    "python-dateutil"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "WDM",
    "watershed",
    "data_management",
    "data",
    "hydrology",
    "hydrological",
    "simulation",
    "fortran",
    "HSPF"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "blacken-docs",
    "black-nbconvert",
    "cleanpy",
    "commitizen",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pyflakes",
    "pylama",
    "pyle",
    "pylint",
    "pyre",
    "pyroma",
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pyupgrade",
    "twine",
    "unimport",
    "velin",
    "vulture"
]

[project.scripts]
wdmtoolbox = "wdmtoolbox.wdmtoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/wdmtoolbox/docs/index.html"
github = "https://github.com/timcera/wdmtoolbox"
bitbucket = "https://bitbucket.org/timcera/wdmtoolbox/src/main/"

[tool.check-manifest]
ignore = ["docs/_function_autosummary/*"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "16.0.7"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.package-data]
wdmtoolbox = ["message.wdm"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
