
srcpython = [
             'wdmtoolbox/__init__.py',
             'wdmtoolbox/wdmtoolbox.py',
             'wdmtoolbox/wdmutil.py',
             'wdmtoolbox/message.wdm',
             ]

# List of files to be installed
py.install_sources(srcpython, subdir:'wdmtoolbox')

srcpython = [
             'wdmtoolbox/toolbox_utils/src/toolbox_utils/__init__.py',
             'wdmtoolbox/toolbox_utils/src/toolbox_utils/tsutils.py',
             ]

py.install_sources(srcpython, subdir:'wdmtoolbox/toolbox_utils/src/toolbox_utils')


srcpython = [
             'wdmtoolbox/toolbox_utils/src/toolbox_utils/readers/hbn.py',
             'wdmtoolbox/toolbox_utils/src/toolbox_utils/readers/__init__.py',
             'wdmtoolbox/toolbox_utils/src/toolbox_utils/readers/plotgen.py',
             'wdmtoolbox/toolbox_utils/src/toolbox_utils/readers/wdm.py',
             ]

py.install_sources(srcpython, subdir:'wdmtoolbox/toolbox_utils/src/toolbox_utils/readers')
